# larkin

./: .gitignore  CLAUDE.md  README.md  devenv.nix  devenv.yaml  pyproject.toml
larkin/: agents.py  display.py  memory.py  models.py  output.py  prompts.py  scripting.py  scripting_prop_test.py  scripting_test.py  tools.py  tools_test.py
larkin/models/: __init__.py  google.py  google_test.py
larkin/tools/: __init__.py  extras.py
